--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <script defer src="script.js"></script>
     <title>Frontend Mentor | Interactive rating component</title>
   </head>
   <body>
@@ -37,7 +38,7 @@
         <!-- Rating state end -->
       </div>
       <!-- Thank you state start -->
-      <div class="thanking">
+      <div class="thanking hidden">
         <img
           src="images/illustration-thank-you.svg"
           alt="Mobile"
@@ -64,7 +65,10 @@
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by <a href="#">Your Name Here</a>.
+        >. Coded by
+        <a href="https://www.linkedin.com/in/abdelrahmantolba/" target="_blank"
+          >Abdelrahman Tolba</a
+        >.
       </div>
     </footer>
   </body>
